chore: rebrand project to Puked and update all platform configurations

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "picky_passenger",
-    "short_name": "picky_passenger",
+    "name": "Puked",
+    "short_name": "Puked",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
