--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   share_plus: ^7.2.2
   uuid: ^4.3.3
   wakelock_plus: ^1.2.8
+  upgrader: ^12.3.0
 
 dev_dependencies:
   flutter_test:
