--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: puked
 description: A sophisticated tool for autonomous driving PMs to record ride comfort.
-version: 1.0.4+4
+version: 1.0.5+5
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -30,6 +30,8 @@ dependencies:
   shared_preferences: ^2.2.2
   
   # Utils & Math
+  http: ^1.2.0
+  url_launcher: ^6.2.5
   package_info_plus: ^8.3.1
   vector_math: ^2.1.4
   json_annotation: ^4.8.1
@@ -37,7 +39,7 @@ dependencies:
   share_plus: ^7.2.2
   uuid: ^4.3.3
   wakelock_plus: ^1.2.8
-  upgrader: ^12.3.0
+  ota_update: ^7.1.0
   flutter_svg: ^2.0.10+1
 
 dev_dependencies:
