--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: puked
 description: A sophisticated tool for autonomous driving PMs to record ride comfort.
-version: 1.0.5+5
+version: 1.0.6+6
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -41,6 +41,7 @@ dependencies:
   wakelock_plus: ^1.2.8
   ota_update: ^7.1.0
   flutter_svg: ^2.0.10+1
+  pocketbase: ^0.23.0+1
 
 dev_dependencies:
   flutter_test:
