--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.osglab" "\0"
             VALUE "FileDescription", "puked" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "puked" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.osglab. All rights reserved." "\0"
             VALUE "OriginalFilename", "puked.exe" "\0"
             VALUE "ProductName", "puked" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
