--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,27 +115,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 新增：同步上传到 Gitea
-      - name: Upload to Gitea Release
+      # 101. 新增：同步到 Gitea (通过链接方式)
+      - name: Sync to Gitea Release
         run: |
-          # 确定版本名
+          VERSION_NAME=${{ github.ref_name }}
+          # 确定版本名和 Release 标题
           if [[ ${{ github.ref }} == refs/tags/v* ]]; then
-            VERSION_NAME=${{ github.ref_name }}
             RELEASE_NAME="Puked $VERSION_NAME"
           else
             VERSION_NAME="latest-main"
             RELEASE_NAME="Puked Main (Rolling Build)"
           fi
-          
-          APK_PATH=$(ls build/app/outputs/flutter-apk/Puked-*.apk | head -n 1)
-          echo "Syncing $VERSION_NAME to Gitea..."
+
+          # 获取刚才上传到 GitHub 的 APK 的公开下载链接 (需要替换为你的真实 GitHub 用户名)
+          # 注意：如果是私有仓库，此链接可能需要登录下载
+          GITHUB_APK_URL="https://github.com/hkgood/Puked/releases/download/$VERSION_NAME/Puked-1.0.8.apk"
+          if [[ ${{ github.ref }} == refs/tags/v* ]]; then
+             GITHUB_APK_URL="https://github.com/hkgood/Puked/releases/download/$VERSION_NAME/Puked-${VERSION_NAME#v}.apk"
+          fi
+
+          echo "Gitea Syncing... Linking to GitHub APK: $GITHUB_APK_URL"
+
+          # 1. 在 Gitea 上创建/更新 Release，并在正文中加入下载链接
+          RELEASE_BODY="### 🚀 自动构建版本\n\n**[点击此处下载 APK (由 GitHub 提供算力支持)]($GITHUB_APK_URL)**\n\n---\n*同步自 GitHub Actions. Commit: ${{ github.sha }}*"
           
           # 确保 jq 已安装
           if ! command -v jq &> /dev/null; then
             sudo apt-get update && sudo apt-get install -y jq
           fi
-          
-          # 1. 创建或获取 Gitea Release
+
           RELEASE_JSON=$(curl -s -X 'POST' \
             "https://gitea.com/api/v1/repos/hkgood/Puked/releases" \
             -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" \
@@ -143,39 +151,25 @@ jobs:
             -d "{
               \"tag_name\": \"$VERSION_NAME\",
               \"name\": \"$RELEASE_NAME\",
-              \"body\": \"Auto-synced from GitHub Actions. Commit: ${{ github.sha }}\",
+              \"body\": \"$RELEASE_BODY\",
               \"draft\": false,
               \"prerelease\": false
             }")
           
+          # 如果已存在 (409 conflict)，则更新 Release 正文
           RELEASE_ID=$(echo $RELEASE_JSON | jq -r '.id')
-          
-          # 如果已存在 (409 conflict)，尝试直接获取 ID
           if [ "$RELEASE_ID" == "null" ] || [ -z "$RELEASE_ID" ]; then
             RELEASE_ID=$(curl -s -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" \
               "https://gitea.com/api/v1/repos/hkgood/Puked/releases" | \
               jq -r ".[] | select(.tag_name==\"$VERSION_NAME\") | .id")
+            
+            echo "Updating existing Gitea Release ID: $RELEASE_ID"
+            curl -s -X 'PATCH' \
+              "https://gitea.com/api/v1/repos/hkgood/Puked/releases/$RELEASE_ID" \
+              -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" \
+              -H "Content-Type: application/json" \
+              -d "{\"body\": \"$RELEASE_BODY\"}"
           fi
-          
-          echo "Gitea Release ID: $RELEASE_ID"
-          
-          # 2. 如果是 Rolling Build，先删除旧的同名 Asset (防止覆盖失败)
-          ASSET_ID=$(curl -s -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" \
-            "https://gitea.com/api/v1/repos/hkgood/Puked/releases/$RELEASE_ID/assets" | \
-            jq -r ".[] | select(.name==\"$(basename $APK_PATH)\") | .id")
-          
-          if [ ! -z "$ASSET_ID" ] && [ "$ASSET_ID" != "null" ]; then
-            echo "Deleting old asset $ASSET_ID..."
-            curl -s -X 'DELETE' \
-              "https://gitea.com/api/v1/repos/hkgood/Puked/releases/$RELEASE_ID/assets/$ASSET_ID" \
-              -H "Authorization: token ${{ secrets.GITEA_TOKEN }}"
-          fi
-          
-          # 3. 上传 APK 到 Gitea
-          curl -X 'POST' \
-            "https://gitea.com/api/v1/repos/hkgood/Puked/releases/$RELEASE_ID/assets" \
-            -H "Authorization: token ${{ secrets.GITEA_TOKEN }}" \
-            -H "Content-Type: multipart/form-data" \
-            -F "attachment=@$APK_PATH"
+
 
 
